--- a/admin/adminpanel/adminpanel-assets/css/style.css
+++ b/admin/adminpanel/adminpanel-assets/css/style.css
@@ -28,6 +28,11 @@ body {
 
 a {
     background-color: transparent;
+    -webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear;
 }
 
 a,
@@ -61,6 +66,14 @@ ul {
     margin-bottom: 10px;
 }
 
+.text-success {
+    color: #28a745!important
+}
+
+.text-danger {
+    color: #dc3545!important
+}
+
 .footer {
     text-align: center;
     margin: 10px 0 20px;
@@ -74,6 +87,43 @@ ul {
     position: relative;
     top: 0;
     height: 100vh;
+}
+
+form label {
+    display: block;
+    /* float: left; */
+    margin-top: 5px;
+    margin-bottom: 5px;
+    /* width: 110px; */
+}
+
+form .input-group {
+    margin: 15px 0;
+}
+
+form.insert_route .input-group,
+form.bus_type .input-group {
+    display: inline-block;
+}
+
+form input {
+    padding: 5px;
+}
+
+form input[type="submit"] {
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
+span {
+    color: #999;
+}
+
+a:hover,
+.sidebar .nav a:hover,
+.sidebar .nav li>a.active:hover,
+.off-canvas-sidebar .nav li>a.active:hover {
+    opacity: 0.6;
 }
 
 .sidebar,
@@ -206,11 +256,11 @@ ul {
 .animation-transition-general,
 .sidebar .nav li>a,
 .off-canvas-sidebar .nav li>a {
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
+    -webkit-transition: all 100ms linear;
+    -moz-transition: all 10ms linear;
+    -o-transition: all 10ms linear;
+    -ms-transition: all 10ms linear;
+    transition: all 100ms linear;
 }
 
 .sidebar .nav li:first-child>a,
@@ -218,13 +268,13 @@ ul {
     margin: 0 15px;
 }
 
-.sidebar .nav li.active>a,
-.off-canvas-sidebar .nav li.active>a {
+.sidebar .nav li>a.active,
+.off-canvas-sidebar .nav li>a.active {
     color: #FFFFFF;
 }
 
-.sidebar[data-color="red"] .nav li.active a,
-.off-canvas-sidebar[data-color="red"] .nav li.active a {
+.sidebar[data-color="red"] .nav li a.active,
+.off-canvas-sidebar[data-color="red"] .nav li a.active {
     background-color: #f44336;
     box-shadow: 0 12px 20px -10px rgba(244, 67, 54, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(244, 67, 54, 0.2);
 }
