--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,6 +10,19 @@ body {
     /* font: 14px 'trebuchet ms', arial, sans-serif; */
 }
 
+form input[type="submit"] {
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
+.text-success {
+    color: #28a745!important
+}
+
+.text-danger {
+    color: #dc3545!important
+}
+
 #pagewrapper {
     margin: 0 auto;
     width: 960px;
@@ -133,8 +146,8 @@ form select {
 }
 
 .busdataarea {
-    height: 75px;
-    width: 250px;
+    height: auto;
+    width: auto;
     background-color: #F5F5F5;
     padding: 10px;
     float: left;
@@ -142,6 +155,7 @@ form select {
     margin-bottom: 10px;
     margin-top: 20px;
     margin-right: 650px;
+    line-height: 20px;
 }
 
 #tSize {
