--- a/assets/css/seat.css
+++ b/assets/css/seat.css
@@ -1,10 +1,9 @@
 #area {
-    height: 300px;
-    width: 550px;
+    height: auto;
+    width: auto;
     background-color: #F5F5F5;
-    padding: 10px;
+    padding: 25px 20px;
     float: left;
-    margin-left: 0px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -12,7 +11,7 @@
 #viweSeat {
     height: 350px;
     width: 550px;
-    padding: 10px;
+    padding: 20px;
     float: left;
     margin-left: -10px;
     margin-top: -35px;
@@ -45,13 +44,13 @@
 }
 
 #holder {
-    height: 220px;
-    width: 530px;
+    height: auto;
+    width: auto;
     background-color: #F5F5F5;
     border: 1px solid #A4A4A4;
-    margin-left: 10px;
-    margin-top: 50px;
+    padding: 15px 10px;
     position: relative;
+    margin: 10px 0;
 }
 
 #print {
